--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,9 @@ Django = "^5.1.2"
 djangorestframework = "^3.15.2"
 django-filter = "^24.3"
 djoser = "^2.3.1"
+dj-database-url = "^2.3.0"
+psycopg2 = "^2.9.10"
+python-dotenv = "^1.0.1"
 
 
 [build-system]
